--- a/funding.html
+++ b/funding.html
@@ -124,7 +124,7 @@
         </div>
       </div>
       <div class="alert alert-success mt-4 animated-bonus">
-        🎉 <strong>Bonus:</strong> Members who donate more than <strong class="highlight-amount">$100</strong> receive a <strong>special token of appreciation</strong> from NSA!
+        🎉 <strong>Bonus:</strong> Person who donate more than <strong class="highlight-amount">$100</strong> receive a <strong>special token of appreciation</strong> from NSA!
       </div>
     </div>
 
