--- a/footer.html
+++ b/footer.html
@@ -7,6 +7,7 @@
 
 <footer class="footer py-3 text-center">
   <div class="container">
-    <p class="mb-0">Designed by <a href="https://www.linkedin.com/in/susan-gautam/"><b>Sushant Gautam</b></a> © 2025 NSA @ MSU.</p>
+    <p class="mb-0">Designed by <a href="https://www.sushantgautam.com/"><b>Sushant Gautam</b></a> © 2025 NSA @ MSU.</p>
   </div>
 </footer>
+
