--- a/discussion.html
+++ b/discussion.html
@@ -21,13 +21,13 @@
       color: white;
     }
 
-    .discussion-bg {
+    /* .discussion-bg {
       background: linear-gradient(-45deg, #ffdddd, #fff0f5, #e0ffff, #fefbd8);
       background-size: 400% 400%;
       animation: gradientFlow 15s ease infinite;
       border-radius: 10px;
       padding: 20px;
-    }
+    } */
 
     @keyframes gradientFlow {
       0% { background-position: 0% 50%; }
