--- a/alumni.html
+++ b/alumni.html
@@ -74,29 +74,16 @@
       display: none;
     }
 
+    /* Theme button now responsive and scrolls with page */
     .btn-theme {
-      position: fixed;
-      bottom: 30px;
-      right: 30px;
-      z-index: 1000;
+      display: flex;
+      justify-content: flex-end;
+      margin: 2rem 1rem 1rem auto;
     }
   </style>
 </head>
 
 <body class="d-flex flex-column min-vh-100">
-
-<!-- 🎨 Theme Switch Button -->
-<div class="dropdown btn-theme">
-  <button class="btn btn-light dropdown-toggle" type="button" id="themeDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    🎨 Switch Theme
-  </button>
-  <div class="dropdown-menu dropdown-menu-right" aria-labelledby="themeDropdown">
-    <a class="dropdown-item" href="#" onclick="switchTheme('light')">☀️ Light</a>
-    <a class="dropdown-item" href="#" onclick="switchTheme('dark')">🌙 Midnight</a>
-    <a class="dropdown-item" href="#" onclick="switchTheme('hacker')">💻 Hacker</a>
-    <a class="dropdown-item" href="#" onclick="switchTheme('blossom')">🌸 Blossom</a>
-  </div>
-</div>
 
 <!-- Toast -->
 <div class="toast-msg" id="toast-msg">Theme changed</div>
@@ -135,6 +122,19 @@
     </nav>
   </section>
 </main>
+
+<!-- 🎨 Theme Switch Button (Moved Above Footer) -->
+<div class="dropdown btn-theme">
+  <button class="btn btn-light dropdown-toggle" type="button" id="themeDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    🎨 Switch Theme
+  </button>
+  <div class="dropdown-menu dropdown-menu-right" aria-labelledby="themeDropdown">
+    <a class="dropdown-item" href="#" onclick="switchTheme('light')">☀️ Light</a>
+    <a class="dropdown-item" href="#" onclick="switchTheme('dark')">🌙 Midnight</a>
+    <a class="dropdown-item" href="#" onclick="switchTheme('hacker')">💻 Hacker</a>
+    <a class="dropdown-item" href="#" onclick="switchTheme('blossom')">🌸 Blossom</a>
+  </div>
+</div>
 
 <!-- Footer -->
 <div id="footer-placeholder"></div>
@@ -213,12 +213,11 @@ function renderPagination() {
 document.getElementById("search-input").addEventListener("input", () => {
   const query = document.getElementById("search-input").value.toLowerCase();
   filteredData = alumniData.filter(a =>
-  a.name.toLowerCase().includes(query) ||
-  a.department.toLowerCase().includes(query) ||
-  a.organization.toLowerCase().includes(query) ||
-  a.batch.toLowerCase().includes(query)
-);
-
+    a.name.toLowerCase().includes(query) ||
+    a.department.toLowerCase().includes(query) ||
+    a.organization.toLowerCase().includes(query) ||
+    a.batch.toLowerCase().includes(query)
+  );
   currentPage = 1;
   renderTable();
   renderPagination();
