--- a/footer.html
+++ b/footer.html
@@ -1,13 +1,23 @@
-<!-- <footer class="footer text-center p-4 mt-5" style="background-color: maroon; color: white;">
-    <div class="container">
-      <p class="mb-0">Designed by <a href="https://www.linkedin.com/in/susan-gautam/"><b>Sushant Gautam @ 2025</b></a></p>
-    </div>
-</footer> -->
-  
 
-<footer class="footer py-3 text-center">
+
+
+<!-- <footer class="footer py-2 text-center">
+  <div class="container d-flex flex-column flex-md-row justify-content-center align-items-center gap-2">
+    <span class="mb-0 text-white">
+      Designed by 
+      <a href="https://www.sushantgautam.com/" target="_blank" class="highlighted-name">Sushant Gautam</a>
+    </span>
+    <span class="mb-0 small text-light opacity-75 ml-md-3">© 2025 Nepalese Student Association @ Mississippi State University</span>
+  </div>
+</footer> -->
+
+
+<footer class="footer py-2 text-center bg-maroon">
   <div class="container">
-    <p class="mb-0">Designed by <a href="https://www.sushantgautam.com/"><b>Sushant Gautam</b></a> © 2025 NSA @ MSU.</p>
+    <p class="mb-1">
+      Designed by 
+      <a href="https://www.sushantgautam.com/" target="_blank" class="highlighted-name">Sushant Gautam</a>
+    </p>
+    <small class="text-light opacity-75">© 2025 Nepalese Student Association @ Mississippi State University</small>
   </div>
 </footer>
-
