--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+  <link rel="stylesheet" href="css/styles.css">
+ 
 
   <style>
     body {
@@ -80,11 +82,25 @@
       font-weight: bold;
       color: blanchedalmond;
       text-align: center;
+      min-height: 3.5rem; /* Increased height to account for two lines on mobile */
+      line-height: 1.6;
+      white-space: pre-wrap; /* Ensures multiline text wraps gracefully */
+      word-break: break-word; /* Prevent overflow on long words */
     }
+    @media (max-width: 576px) {
+    #typed-welcome {
+        min-height: 5rem;
+      }
+    }
+
+    
+
     @keyframes fadeInUp {
       0% { opacity: 0; transform: translateY(20px); }
       100% { opacity: 1; transform: translateY(0); }
     }
+    
+
   </style>
 </head>
 
@@ -168,7 +184,7 @@
         backDelay: 1500,
         loop: true,
         showCursor: true,
-        cursorChar: '|'
+        cursorChar: ''
       });
 
       // Load Team JSON
