--- a/alumni.html
+++ b/alumni.html
@@ -8,6 +8,7 @@
   <!-- Bootstrap & Icons -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
+  <link rel="stylesheet" href="css/styles.css">
 
   <style>
     :root {
