--- a/funding.html
+++ b/funding.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+  <link rel="stylesheet" href="css/styles.css">
 
   <style>
     body {
@@ -70,6 +71,22 @@
       0%, 100% { opacity: 1; }
       50% { opacity: 0.4; }
     }
+    #typed-donation {
+      min-height: 3.5rem; /* Prevents layout jump during typing */
+      display: block;
+      font-size: 1.25rem;
+      line-height: 1.6;
+      white-space: pre-wrap;
+      word-break: break-word;
+    }
+    @media (max-width: 576px) {
+      #typed-donation {
+        min-height: 4rem;
+        font-size: 1.1rem;
+      }
+    }
+
+
   </style>
 </head>
 <body class="d-flex flex-column min-vh-100">
@@ -134,8 +151,8 @@
         <div class="section-card h-100">
           <h4 class="text-danger"><i class="bi bi-credit-card-fill"></i> Ways to Contribute</h4>
           <ul>
-            <li>💸 <strong>Zelle:</strong> nsamsu@gmail.com</li>
-            <li>🔗 <strong>PayPal:</strong> <a href="#" target="_blank">paypal.me/nsamsu</a></li>
+            <li>💸 <strong>Zelle:</strong> ---</li>
+            <li>🔗 <strong>PayPal:</strong> <a href="#" target="_blank">---</a></li>
           </ul>
           <p class="text-muted">Include your name and "NSA Membership" or "Donation" in the note.</p>
           <hr>
@@ -206,7 +223,7 @@
       loop: true,
       smartBackspace: false,
       showCursor: true,
-      cursorChar: '|'
+      cursorChar: ''
     });
   });
   $(function () {
