--- a/more-info.html
+++ b/more-info.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+  <link rel="stylesheet" href="css/styles.css">
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   <style>
     body {
@@ -24,11 +25,22 @@
       margin-bottom: 1rem;
     }
     #typed-welcome {
+      min-height: 3.5rem; /* Adjust based on font size */
+      display: block;
       font-size: 1.5rem;
       font-weight: bold;
       color: #ffeb3b;
       text-align: center;
+      white-space: pre-wrap;
+      word-break: break-word;
     }
+    @media (max-width: 576px) {
+      #typed-welcome {
+        min-height: 4.2rem;
+        font-size: 1.25rem;
+      }
+    }
+
   </style>
 </head>
 <body class="d-flex flex-column min-vh-100">
@@ -185,7 +197,7 @@
       backDelay: 1500,
       loop: true,
       showCursor: true,
-      cursorChar: '|'
+      cursorChar: ''
     });
   });
 </script>
