--- a/footer.html
+++ b/footer.html
@@ -18,6 +18,7 @@
       Designed by 
       <a href="https://www.sushantgautam.com/" target="_blank" class="highlighted-name">Sushant Gautam</a>
     </p>
-    <small class="text-light opacity-75">© 2025 Nepalese Student Association @ Mississippi State University</small>
+    <small class="text-muted" style="font-size: 0.7rem;">© 2025 Nepalese Student Association @ Mississippi State University</small>
+
   </div>
 </footer>
