--- a/footer.html
+++ b/footer.html
@@ -12,13 +12,12 @@
 </footer> -->
 
 
-<footer class="footer py-2 text-center bg-maroon">
+<footer class="footer py-3 text-center">
   <div class="container">
     <p class="mb-1">
       Designed by 
-      <a href="https://www.sushantgautam.com/" target="_blank" class="highlighted-name">Sushant Gautam</a>
+      <a href="https://www.sushantgautam.com/" class="highlighted-name">Sushant Gautam</a>
     </p>
     <small class="text-muted" style="font-size: 0.7rem;">© 2025 Nepalese Student Association @ Mississippi State University</small>
-
   </div>
 </footer>
