--- a/funding.html
+++ b/funding.html
@@ -72,13 +72,19 @@
       50% { opacity: 0.4; }
     }
     #typed-donation {
-      min-height: 3.5rem; /* Prevents layout jump during typing */
-      display: block;
-      font-size: 1.25rem;
+      display: inline-block;
+      min-height: 4.5rem; /* Reserve enough height */
       line-height: 1.6;
+      font-size: 1.25rem;
+      font-weight: bold;
+      color: #212529;
       white-space: pre-wrap;
       word-break: break-word;
+      overflow-anchor: none;
     }
+    
+
+
     @media (max-width: 576px) {
       #typed-donation {
         min-height: 4rem;
@@ -157,7 +163,10 @@
           <p class="text-muted">Include your name and "NSA Membership" or "Donation" in the note.</p>
           <hr>
           <h5 class="text-warning"><i class="bi bi-piggy-bank-fill"></i> Donation Progress</h5>
-          <p><span id="typed-donation" class="animated-text fw-bold text-primary"></span></p>
+          <div class="animated-text fw-bold text-primary">
+            <span id="typed-donation"></span>
+          </div>
+          
           <div class="progress" style="height: 30px;">
             <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" style="width: 45%;" aria-valuenow="450" aria-valuemin="0" aria-valuemax="1000">$450 Raised</div>
           </div>
