--- a/index.html
+++ b/index.html
@@ -155,6 +155,26 @@
         </div>
       </div>
     </section>
+
+    <!-- Important Documents (Drive Link Section) -->
+    <section class="container mt-5" data-aos="zoom-in">
+      <h2 class="text-center mb-4 section-heading animate__animated animate__fadeIn">📂 NSA Document Drive</h2>
+      <div class="card bg-light shadow-sm p-4 text-center">
+        <div class="d-flex flex-column align-items-center">
+          <i class="bi bi-cloud-arrow-down-fill text-primary" style="font-size: 3rem;"></i>
+          <h4 class="mt-3 text-dark font-weight-bold">Access All Official NSA Documents</h4>
+          <p class="text-muted">
+            View or download important files like the <strong>NSA Constitution</strong>, <strong>meeting minutes</strong>, 
+            <strong>event planning docs</strong>, and more — all in one organized Drive folder.
+          </p>
+          <a href="https://drive.google.com/drive/folders/1paos0NlEGFZHsAJfQ4MQWuwvKeRsm_Wo?usp=sharing" target="_blank" class="btn btn-outline-primary btn-lg mt-2">
+            <i class="bi bi-box-arrow-up-right"></i> Open NSA Drive Folder
+          </a>
+        </div>
+      </div>
+    </section>
+
+
   </main>
 
   <!-- Footer -->
