--- a/funding.html
+++ b/funding.html
@@ -161,6 +161,11 @@
             <li>🔗 <strong>PayPal:</strong> <a href="#" target="_blank">---</a></li>
           </ul>
           <p class="text-muted">Include your name and "NSA Membership" or "Donation" in the note.</p>
+
+          <div class="alert alert-warning mt-3 font-weight-bold">
+            ⚠️ <strong>Please register through the Google Form first before paying the membership fees.</strong>
+          </div>
+
           <hr>
           <h5 class="text-warning"><i class="bi bi-piggy-bank-fill"></i> Donation Progress</h5>
           <div class="animated-text fw-bold text-primary">
