--- a/funding.html
+++ b/funding.html
@@ -209,6 +209,7 @@
     <div class="section-card" data-aos="zoom-in-up">
       <h4 class="text-danger"><i class="bi bi-youtube animate__animated animate__bounce animate__infinite"></i> Videos: Why Support NSA?</h4>
       <p>Hear from our members and supporters:</p>
+      <h4 class="text-success">We are working on it. Videos will be uploaded soon.</h4>
       <div class="embed-responsive embed-responsive-16by9 mb-3">
         <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/YOUR_VIDEO_1_ID" allowfullscreen></iframe>
       </div>
