--- a/more-info.html
+++ b/more-info.html
@@ -87,6 +87,17 @@
       <h4 class="text-success"><i class="bi bi-house-door"></i> Your New Home Away from Home</h4>
       <p>Here are some popular apartment choices. Each link leads to their official site for current offers and details:</p>
       <div class="row">
+
+        <div class="col-md-6 mb-3" data-aos="zoom-in">
+          <div class="card shadow-sm">
+            <div class="card-body">
+              <h5 class="card-title">🏡 <a href="https://www.apartments.com/rosehill-place-starkville-ms/06gw5s0/" target="_blank">Rosehill Place Apartments</a></h5>
+              <p>Best for family. Reach out to us to connect with current residents.</p>
+            </div>
+          </div>
+        </div>
+
+
         <div class="col-md-6 mb-3" data-aos="zoom-in">
           <div class="card shadow-sm">
             <div class="card-body">
