--- a/more-info.html
+++ b/more-info.html
@@ -177,6 +177,19 @@
         <strong>We're here for you!</strong> Your journey begins now — and we're honored to be a part of it. Welcome to MSU! 🎉
       </div>
     </div>
+
+    <!-- Discussion Prompt Section -->
+    <div class="container mb-5" data-aos="zoom-in">
+      <div class="alert alert-warning shadow-sm border border-warning">
+        <h5 class="mb-2"><i class="bi bi-question-circle-fill text-warning"></i> Have Questions?</h5>
+        <p class="mb-1">
+          If you have any queries or concerns related to travel, housing, or your MSU journey — feel free to drop them in our
+          <a href="discussion.html" class="font-weight-bold text-decoration-underline">Discussion Section</a>.
+        </p>
+        <p class="mb-0">Your questions might help others too!</p>
+      </div>
+    </div>
+
   </section>
 </main>
 
