--- a/alumni.html
+++ b/alumni.html
@@ -185,15 +185,17 @@ function renderTable() {
 function renderPagination() {
   const container = document.getElementById("pagination-container");
   container.innerHTML = "";
-  const totalPages = Math.ceil(filteredData.length / itemsPerPage);
 
-  const createPageItem = (label, page, disabled = false, active = false) => {
+  const totalPages = Math.ceil(filteredData.length / itemsPerPage);
+  if (totalPages <= 1) return;
+
+  const createPageItem = (label, page, isDisabled = false, isActive = false) => {
     const li = document.createElement("li");
-    li.className = `page-item ${active ? "active" : ""} ${disabled ? "disabled" : ""}`;
+    li.className = `page-item ${isDisabled ? "disabled" : ""} ${isActive ? "active" : ""}`;
     li.innerHTML = `<a class="page-link" href="#">${label}</a>`;
     li.onclick = (e) => {
       e.preventDefault();
-      if (!disabled && currentPage !== page) {
+      if (!isDisabled && page !== currentPage) {
         currentPage = page;
         renderTable();
         renderPagination();
@@ -209,33 +211,49 @@ function renderPagination() {
     return li;
   };
 
+  const maxPagesToShow = 8; // including Prev + Next + Ellipsis
+
+  // Previous
   container.appendChild(createPageItem("Previous", currentPage - 1, currentPage === 1));
 
-  if (totalPages <= 7) {
+  if (totalPages <= 5) {
+    // Show all if <= 5 pages
     for (let i = 1; i <= totalPages; i++) {
       container.appendChild(createPageItem(i, i, false, currentPage === i));
     }
   } else {
-    // First page
+    const showLeftEllipsis = currentPage > 3;
+    const showRightEllipsis = currentPage < totalPages - 2;
+
+    // Always show first page
     container.appendChild(createPageItem(1, 1, false, currentPage === 1));
 
-    // Left ellipsis
-    if (currentPage > 4) container.appendChild(addEllipsis());
+    if (showLeftEllipsis) container.appendChild(addEllipsis());
 
-    // Middle pages (current ±2)
-    for (let i = currentPage - 2; i <= currentPage + 2; i++) {
-      if (i > 1 && i < totalPages) {
-        container.appendChild(createPageItem(i, i, false, currentPage === i));
-      }
+    // Calculate middle pages
+    let start = Math.max(2, currentPage - 1);
+    let end = Math.min(totalPages - 1, currentPage + 1);
+
+    if (!showLeftEllipsis) {
+      start = 2;
+      end = 4;
+    }
+    if (!showRightEllipsis) {
+      start = totalPages - 3;
+      end = totalPages - 1;
     }
 
-    // Right ellipsis
-    if (currentPage < totalPages - 3) container.appendChild(addEllipsis());
+    for (let i = start; i <= end; i++) {
+      container.appendChild(createPageItem(i, i, false, currentPage === i));
+    }
 
-    // Last page
+    if (showRightEllipsis) container.appendChild(addEllipsis());
+
+    // Always show last page
     container.appendChild(createPageItem(totalPages, totalPages, false, currentPage === totalPages));
   }
 
+  // Next
   container.appendChild(createPageItem("Next", currentPage + 1, currentPage === totalPages));
 }
 
