--- a/alumni.html
+++ b/alumni.html
@@ -121,6 +121,10 @@
     <nav aria-label="Page navigation">
       <ul class="pagination justify-content-center" id="pagination-container"></ul>
     </nav>
+
+    <div class="mt-4 text-center">
+      <p>If you're an alumnus and want to be listed here, reach out via the <a href="connect.html">Connect</a> page.</p>
+    </div>
   </section>
 </main>
 
