--- a/discussion.html
+++ b/discussion.html
@@ -74,11 +74,11 @@
       </div>
 
       <!-- First Time Info -->
-      <div class="alert alert-info" role="alert">
+<!--       <div class="alert alert-info" role="alert">
         <h5 class="font-weight-bold">💬 First Time Here?</h5>
         <p>Getting started is easy! Sign in with your <strong>Google, Facebook, or Disqus account</strong> — no setup needed. Once signed in, you're ready to post and join the discussion right away!</p>
         <p>🌐 Your voice matters — share your thoughts, ask questions, or cheer for your fellow NSA members!</p>
-      </div>
+      </div> -->
 
       <!-- Disqus Thread -->
       <div class="mt-4" id="disqus_thread"></div>
