--- a/connect.html
+++ b/connect.html
@@ -135,6 +135,10 @@
           <div class="section-card form-shadow">
             <h4><i class="bi bi-envelope-paper"></i> Reach Out to Us</h4>
             <p>Have a question or idea? Let us know here:</p>
+            <p class="mb-3">
+              📧 Or email us directly at 
+              <a href="mailto:info@nsamsstate.org" class="font-weight-bold text-danger">info@nsamsstate.org</a>
+            </p>
             <div class="embed-responsive embed-responsive-1by1">
               <iframe class="embed-responsive-item" 
                       src="https://docs.google.com/forms/d/e/1FAIpQLSdrHXVNAFSdpF2FyPoClnHJEo3EWaJ0n2hwsUPoRSPgA7g_1g/viewform?embedded=true" 
@@ -143,6 +147,7 @@
               </iframe>
             </div>
           </div>
+
         </div>
       </div>
     </section>
