--- a/header.html
+++ b/header.html
@@ -26,7 +26,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark sticky-top" style="background-color: maroon;">
   <div class="container">
     <a class="navbar-brand d-flex align-items-center" href="index.html">
-      <img src="img/nsa-logo.jpeg" alt="NSA Logo" class="nsa-logo">
+      <img src="img/nsa-logo-new.jpeg" alt="NSA Logo" class="nsa-logo">
       <div class="d-flex flex-column lh-sm">
         <span class="nsa-brand-title">Nepalese Student Association</span>
         <small class="nsa-brand-subtitle">Mississippi State University</small>
