--- a/funding.html
+++ b/funding.html
@@ -104,13 +104,13 @@
 <div id="bannerCarousel" class="carousel slide carousel-fade" data-ride="carousel" data-interval="5000">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img/dashain-2023.jpg" class="d-block w-100" style="height: 400px; object-fit: cover;" alt="Dashain">
+      <img src="img/nsa_msstate_tihar.jpg" class="d-block w-100" style="height: 400px; object-fit: cover;" alt="Tihar">
     </div>
     <div class="carousel-item">
       <img src="img/Holi-2023.jpg" class="d-block w-100" style="height: 400px; object-fit: cover;" alt="Holi">
     </div>
     <div class="carousel-item">
-      <img src="img/nsa_extra.jpg" class="d-block w-100" style="height: 400px; object-fit: cover;" alt="NSA Event">
+      <img src="img/good_nsa_bg.jpg" class="d-block w-100" style="height: 400px; object-fit: cover;" alt="NSA Event">
     </div>
   </div>
 </div>
