--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
     <!-- Carousel -->
     <div id="nsaCarousel" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
-        <div class="carousel-item"><img src="img/nsa_msstate_tihar.jpg" class="d-block w-100" alt="NSA Image 1"></div>
-        <div class="carousel-item active"><img src="img/dashain-2024.jpg" class="d-block w-100" alt="NSA Image 2"></div>
+        <div class="carousel-item active"><img src="img/nsa_msstate_tihar.jpg" class="d-block w-100" alt="NSA Image 1"></div>
+        <div class="carousel-item"><img src="img/dashain-2024.jpg" class="d-block w-100" alt="NSA Image 2"></div>
         <div class="carousel-item"><img src="img/Holi-2023.jpg" class="d-block w-100" alt="NSA Image 3"></div>
         <div class="carousel-item"><img src="img/nsa_extra.jpg" class="d-block w-100" alt="NSA Image 4"></div>
         <div class="carousel-item"><img src="img/dashain-2023.jpg" class="d-block w-100" alt="NSA Image 5"></div>
